--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ authors = ["Ben Lauwens <ben.lauwens@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CommonMark = "a80b9123-70ca-4bc0-993e-6e3bcb318db6"
 FileWatching = "7b1f6079-737a-58dc-b8bc-7a2ca5c1b5ee"
+IOCapture = "b5f81e59-6552-4d32-b1f0-c071b021bf89"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
